fullSandbox11072023/force-app/main/default/objects/Pivot_Snapshots__c/Pivot_Snapshots__c.object-meta.xml
<CustomObject>
    <label>Pivot Snapshots</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Pivot Snapshots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pivot Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>