fullSandbox11072023/force-app/main/default/objects/Pivot_Snapshots__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Pivot Snapshots</relationshipLabel>
    <relationshipName>Pivot_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>