fullSandbox11072023/force-app/main/default/objects/Pivot_Snapshots__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>CASE(Snapshot_Name__c, 
&quot;Quota Pivot Compare&quot;, &quot;Quota&quot;,
&quot;Sales&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>